--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -9,12 +9,32 @@
     position: relative;
     width: 100%;
     height: 100vh;
+    overflow: hidden;
+  }
+  
+  .hero-container .image-container {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
   }
   
   .hero-container img {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     object-fit: cover;
+    animation: zoomIn 10s ease-in-out infinite;
+  }
+  
+  @keyframes zoomIn {
+    0% {
+      transform: scale(1);
+    }
+    50% {
+      transform: scale(1.05);
+    }
+    100% {
+      transform: scale(1);
+    }
   }
   
   .slogan {
