--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,12 +2,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    padding: 10px 20px; /* Adjusted padding */
     position: fixed;
     width: 100%;
     top: 0;
     left: 0;
-    background: transparent;
+    background: transparent; /* Fully transparent background */
     z-index: 1000;
   }
   
@@ -18,17 +18,39 @@
   .navbar-links {
     list-style: none;
     display: flex;
-    gap: 20px;
+    margin: 0;
+    padding: 0;
+    padding-right: 50px; /* Add padding to the right */
   }
   
   .navbar-link {
+    cursor: pointer;
     text-decoration: none;
     color: white;
-    font-size: 1.2em;
+    font-size: 1em;
+    margin-left: 20px; /* Add margin to the left of each link */
     transition: color 0.3s ease;
+    white-space: nowrap; /* Prevent text wrapping */
   }
   
   .navbar-link:hover {
     color: gold;
+  }
+  
+  @media (max-width: 768px) {
+    .navbar {
+      flex-direction: column;
+      align-items: flex-start;
+      padding: 10px; /* Adjusted padding for mobile */
+    }
+  
+    .navbar-links {
+      flex-direction: column;
+      gap: 10px;
+    }
+  
+    .navbar-link {
+      font-size: 0.9em;
+    }
   }
   
